<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_red"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/managefavorites"
        android:icon="@drawable/ic_favorite_red"
        android:title="@string/manage_favorites"
        app:showAsAction="never"/>
    <item
        android:id="@+id/power_off"
        android:icon="@drawable/ic_power_button"
        android:title="@string/power_off"
        app:showAsAction="never"/>




</menu>